// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "categories": [],
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fGKExHSyeYn9zNTc9vcdVSzzwac3ojgip8t78GdL7cyEhnbmuwPAVFWHKpW4axzgl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=0R3HhJPw0z0Q7kNvwGhpfzk&_nc_oc=Adm5WGOitkZpONMbFdiv936sLE6BalYDNAu1y3X6JRviKBWXgyELPb7jK_7fRzNTwbETcFf_1sPnoKHHBPDTEOiH&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&oh=00_AfRqcQnHQAkrX0xKcIlSFzDjoBjoxPImEKZaPcSg5TpwQQ&oe=68AE573A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fGKExHSyeYn9zNTc9vcdVSzzwac3ojgip8t78GdL7cyEhnbmuwPAVFWHKpW4axzgl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersResponded": 2,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "categories": [],
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=109&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=B7IUn7XLZGEQ7kNvwEKp0Ko&_nc_oc=Adncwk63FiyHWyAtTPwlXsI4vfrRzOTZk3xIpJIWBakravkm7tmGMkD54WO17GMVbPDthy1DDl63Hy4ohsNLh0UC&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=_PVubacPpTpSycxdY0PHvA&oh=00_AfSoi-n6uZdMB953ZFVSDa5WQYJMnl4VZVcMCcgofb6BcQ&oe=688CC30B",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=7qGpFFsWVKkQ7kNvwFsdUi_&_nc_oc=AdnG_Y_wHT_yX7SrrktfqgFDlePzWNU7ZZVzZHEY-UdJPG5qZbpo29scNKYlmZ4gxl0x-WWt4VZZr6hoGDYwLawp&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=_PVubacPpTpSycxdY0PHvA&oh=00_AfSMRzd3ZAekgcZWozaugBPK0U-ipmAd2qWwTBTyX6zaAQ&oe=688CA76B",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=sKKeaHj-If4Q7kNvwGyuvxQ&_nc_oc=Adm06dot6TIN-S2Dif3HbybTldJtgFmeLOeIgmqLzHP3tyNSeh00f3DAa4J7NVMNkuEH35P8mw5Cu5-O4Xjvc6Pt&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=_PVubacPpTpSycxdY0PHvA&oh=00_AfSEJ7H_g5tPvl-Zb_NoPBtmQwZLYucrfWVK6asszk38Uw&oe=688CC7C2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/439064200_1017561226405063_8213471074013536032_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=1&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=BMfP6DDU9O8Q7kNvwEdMuNK&_nc_oc=Adnzqf0TgrP8PStDfSqhvSSGt9rqAnTBWJ2Htkn04nS_InRjSQUNPV2_WYqgrhkIvyurnXj4T259geY8hpbU68bE&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&_nc_gid=_PVubacPpTpSycxdY0PHvA&oh=00_AfRdn_iNrDj8TMIkrkxaot24iVAw0XTnMpb_N-I_vn6o-Q&oe=688CA6C3",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": null,
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/514514037_10163262741053641_8701551833184811993_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=75d36f&_nc_ohc=DSxXzdDt3q0Q7kNvwEExEjY&_nc_oc=AdlL8mQGsH6O-uHitDBirO6ggsgPLYNorAgx34Chiku4MTZYem2FnnkYdNiuzPRIWPn2PnxCYRMxloD-OABo48SE&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=tnKINnYDcmRxD-BZ5fdzHQ&oh=00_AfTOyRxBfVD2YGK7_c1Kx8YsTlw3TeAWepLR1XXD5sMQTQ&oe=688C92D5",
    "url": "https://www.facebook.com/photo/?fbid=10160954790708641&set=gm.602005851971871",
  },
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersResponded": 1562,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "categories": [
    {
      "label": "Religion",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1763934757268181%5D%7D",
    },
  ],
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM MDT",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Deerfoot",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/460987627_944177641081940_5270929113802053218_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=JGioClWXNs4Q7kNvwHhgWiM&_nc_oc=AdlDVmSvKulKN2TMv7fFRBgs-DJu07xn27fMIw5E9ND36snnClZVo7IXrL4NUYmJOYTaP0hvhQZGdroB-ZyWg-74&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&_nc_gid=foPplnuYOn-qKSnQOUJctg&oh=00_AfSKivLLn8fGMW4N0dgNS4XYXhejl5EvkTkxlBlfhvWhMA&oe=688C9A24",
      },
      "type": "User",
      "url": "https://www.facebook.com/facdeerfoot",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": null,
    "description": "Joining Jesus in the renewal of all things! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Deerfoot",
    "type": "PLACE",
    "url": "https://facebook.com/facdeerfoot",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "parentEvent": {
    "id": "1137956700212933",
  },
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/481055432_1056019033231133_4786716278309143615_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=APiK4PJE7gEQ7kNvwH04e8T&_nc_oc=AdnxuvmZpHttfYZ2YUAKKW-nUgnstz1yl52bBnzUEj3lbwUCtkGuKZPwQMDn-jeKYXQ-75_485tWZ83CpYU2sznA&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&_nc_gid=13pTUNQoK57joDJJ9Cxksw&oh=00_AfRfEB_x9MC6Q_fgGM-HM3o17L7Dwbzwf5aGUIU9b2N5rw&oe=688CAE54",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "photos": [],
  "siblingEvents": [
    {
      "endTimestamp": 1681065000,
      "id": "1137956703546266",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681060500,
    },
    {
      "endTimestamp": 1681057800,
      "id": "1137956710212932",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681053300,
    },
    {
      "endTimestamp": 1681004700,
      "id": "1137956706879599",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681000200,
    },
  ],
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersResponded": 20,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "categories": [
    {
      "label": "Wellness",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1712245629067288%5D%7D",
    },
  ],
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM MDT",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": null,
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/518191617_10171886318690261_7295637241947532909_n.jpg?stp=dst-jpg_p960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=75d36f&_nc_ohc=yKyJd2UAiG4Q7kNvwGUJu1u&_nc_oc=AdmDZQylxYHjRbP1OtreFijiNjCM7-IV3JHh2bUSTKBcJfBrghSp_73M3p8uKoU_6IHf3hcz5nQan_0JDaT-tajD&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=EUovtDDd4iPvRRcC_fT85w&oh=00_AfQUcUXaY_1CTZZdP8g-VzWB-juo9qtbkMcetN8_k90THQ&oe=688C9879",
    "url": "https://www.facebook.com/photo/?fbid=10167524860335261&set=gm.252144523936238",
  },
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersResponded": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "categories": [
    {
      "label": "Shopping",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1759906074034918%5D%7D",
    },
  ],
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM MDT",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/491553306_1221674636192885_5739177654127096451_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=3UcTryFIJhcQ7kNvwFMJRlJ&_nc_oc=AdnMoSs7eO-Di7aqOgSyT1Ack1kYvuwqk8KEGdSNJ8OW7AxiGCPvvbnfbgcHs3tzQRtpPUCNMBYLWSk4sMqII8mf&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=jMhNWlqr81yc8QfN4qPsxA&oh=00_AfRagegRrS6agZYDTIkU5kODXBCLL4Otnrj_U6beVbS2WQ&oe=688CAA5C",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": null,
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/472570967_1152279459799070_954455182245359149_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=9MreXmdlTPkQ7kNvwF0qMhl&_nc_oc=AdmDkWs-UXfAbR7XORObBVPXGSmSTKHLPlDyc0z150RzU30FdbuQnqE5-SQsToN5rOLuVPcQQVNamEuRSkQEK2Jg&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=vxQGPHbJwErvYlDx0mm6rA&oh=00_AfR3qqc0Y_hPZynD8mOPPikG357opucBcs_4hmmUY3P0EQ&oe=688CBB94",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersResponded": 5938,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "categories": [],
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fGKExHSyeYn9zNTc9vcdVSzzwac3ojgip8t78GdL7cyEhnbmuwPAVFWHKpW4axzgl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=0R3HhJPw0z0Q7kNvwGhpfzk&_nc_oc=Adm5WGOitkZpONMbFdiv936sLE6BalYDNAu1y3X6JRviKBWXgyELPb7jK_7fRzNTwbETcFf_1sPnoKHHBPDTEOiH&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&oh=00_AfRqcQnHQAkrX0xKcIlSFzDjoBjoxPImEKZaPcSg5TpwQQ&oe=68AE573A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fGKExHSyeYn9zNTc9vcdVSzzwac3ojgip8t78GdL7cyEhnbmuwPAVFWHKpW4axzgl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": null,
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "categories": [
    {
      "label": "Party",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B183019258855149%5D%7D",
    },
  ],
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM MDT",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/410227062_382882167415824_4051646999230968301_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=zPLqiwb0R8cQ7kNvwFE8Bgl&_nc_oc=AdmCexiE7_VXspYdLkdgtvVzvfwT4uHNA56Qfbe19ip_hw-FdJc8r6cs5uXYVSDO8H3C-AuqfeXW-60nzmRfoQQZ&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=CmixqhDMxF5L9C_-6u6Z_Q&oh=00_AfQb4iZONuZqW2flyVhszmK9MR2mzqDGjHApGg_FUtlczQ&oe=688CBDE6",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=Rs6cKDWd694Q7kNvwERzsAh&_nc_oc=AdlWcE8J2xTwBdecJfSaYPY88CmBxdIwI0KKXBbM1DIMElJyMXBzqg-LdkiGYw7ywI1xcrmHE_qtpDoqdBS2jpP-&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=CmixqhDMxF5L9C_-6u6Z_Q&oh=00_AfQyVExiWxrPD4a0ebtQD5CTCFPDNAzc_lb4q710as6KrA&oe=688C9527",
      },
      "type": "User",
      "url": null,
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": null,
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/483866251_1107783254695132_4478007887358984133_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=75d36f&_nc_ohc=HMCyG9MnAaYQ7kNvwEOJ7jn&_nc_oc=Adl1f2PoVX-RjWyDoUeVkLTyDM35QT2ceQm0p4F4efmLatQLCSJYWJr5LbK-rpDbvF2C62u9ulrX7dbjlMf48DvO&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&_nc_gid=J4rxpsTZvUzCLoUPBxD0Og&oh=00_AfSmcp_AzPDDgDpOhWRY0y3Lz5hhNV7RKLxUVJEWtepbxQ&oe=688CAA28",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersResponded": 423,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "categories": [
    {
      "label": "Causes",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1284277608291920%5D%7D",
    },
  ],
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 4:00 PM – 5:30 PM EEST",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=111&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=FPqaMZBMV80Q7kNvwHhkR8M&_nc_oc=AdnIT6uyLH0Rw8eqjrwI_wfoxvbdwF4ytZVOAjSjlFC5H83-1WC3vjCrhWwbdXkFsH61vE_RPWuMfQjVGn7bmV-L&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=lwag5BpzWTR7Cb9M7ii-2g&oh=00_AfSHMHbe59IEfmiRbTMGhoN0XhJE33qFjUn_8h7RZxDTtw&oe=688C9911",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=0v9SmUs4I9wQ7kNvwFBgPXT&_nc_oc=AdlsuX4FHmKRQt8cN1zX8J6nXGaCZ_O5MZnh_L-_8Rkom4QGNI07C2kiTR8VVi0jrnwYFmHULrB1Nk0QI3QSYcZJ&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&_nc_gid=lwag5BpzWTR7Cb9M7ii-2g&oh=00_AfSdly2AL4638r4AgUB3PnFEumWehLtRC_CduADG4MZ2mQ&oe=688CBC7C",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=NfOM41TJrhgQ7kNvwGVVzlv&_nc_oc=Adn1cxQ_B9gaEMBEJbPTP00sQzFOpDK-ALL6i5UY8IbS8VdNWr2L0hHsI78hvIgybti_LbAIeOBpMqaxM4MClP2Z&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=lwag5BpzWTR7Cb9M7ii-2g&oh=00_AfT83nQpNyuwTsMdpeucgrV4w_qf3oPJ59m6EOn3iMqv2A&oe=688CA2B2",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/473965764_1047560367408769_1188670290210731717_n.jpg?stp=c293.0.1414.1414a_cp0_dst-jpg_s74x74_tt6&_nc_cat=100&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=CtwG9Odoc7sQ7kNvwFfwwBF&_nc_oc=AdmPET1XFz7DrwZZSxlodS7QRHQOsMTaUAuzt4Qq69FW8agdH7VPsCE82HcLawnUpCkx-2M3sd3K4I0A8ne-gYht&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&_nc_gid=lwag5BpzWTR7Cb9M7ii-2g&oh=00_AfTEnvKFUPfeV2KOC24O1Yw7_6IdV1hyqQHqkmDrU6y7Sw&oe=688CA93A",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "parentEvent": null,
  "photo": {
    "id": "566851448917737",
    "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/481015514_954787620124116_8420198049916663880_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=75d36f&_nc_ohc=pTa09GFXEioQ7kNvwHX84ps&_nc_oc=AdmPqA7IvOiI7vUIHA2LIEFGMA1E9h9X-HmySMHZr-YK-9Jn10jyeeTtG-SoyA4Zvx7DPUCrA4wUfey13NS8roDo&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=x53DwKw0kUf-KU_89v3Vkw&oh=00_AfTvqY48SrOL32KoLzD96X6bE4A7J-oY2fePVI-FV0XwIA&oe=688CC805",
    "url": "https://www.facebook.com/photo/?fbid=566851448917737&set=gm.243565445018290",
  },
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersResponded": 123,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "categories": [
    {
      "label": "Sports",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B607999416057365%5D%7D",
    },
  ],
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 4:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/448627833_865600602273587_4050110030248245393_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=1&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=q1OifxDO0cQQ7kNvwFacfVE&_nc_oc=AdmhRX1TMC1aNTTUzuFC2dxynuGUkgjDVAw1H1nxMhnchNDs95GohSj7_Y99K24xD9iGH4U0XceFSMTVHwohCfTc&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&_nc_gid=48niYo48aAf-767CyOjvCw&oh=00_AfQyDiKwEL032S7EDY_-PMPl-gDDJLZ0FN9MszESd7P74w&oe=688CAFA9",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=sKKeaHj-If4Q7kNvwGyuvxQ&_nc_oc=Adm06dot6TIN-S2Dif3HbybTldJtgFmeLOeIgmqLzHP3tyNSeh00f3DAa4J7NVMNkuEH35P8mw5Cu5-O4Xjvc6Pt&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=48niYo48aAf-767CyOjvCw&oh=00_AfRQI_LXNamBadRPWaJcPc0yiv_az-Bea61pTXlWv38_qw&oe=688CC7C2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": null,
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our western heritage, cultures and community spirit.",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/473081369_1630277110957063_1481524804345515679_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=q0jsB_uozyEQ7kNvwGnQ6sD&_nc_oc=AdlcORu7eYuz_z4s7xoSwv_d5UOfOP6QuytyrWI9gTrHmqDbLf2oA_PWJYioTOAxVpxW5_OYF_4VNAZCgZx2dO0i&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=-SjnKJ0p4eNYD7-qkGmEFQ&oh=00_AfR55iaP1YDJDl_dB3H81hzPNoe1V4Gvq6FeW2AqIjY7qA&oe=688CC836",
    "url": "https://www.facebook.com/photo/?fbid=1273089803342464&set=gm.977705193657933",
  },
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersResponded": 598,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with multiple photos 1`] = `
{
  "categories": [],
  "description": "📅 SAVE THE DATE : 14 août pour la prochaine ‘DStress Afterwork Gourmand’- celle que vous attendez chaque année avec impatience : La Soirée Blanche ! 

Au programme : Assiettes gourmandes concoctées par les Chefs du Chant d'Eole et un chef Gault & Millau invité  & ambiance musicale toute la soirée ! ",
  "endTimestamp": null,
  "formattedDate": "Thursday, August 14, 2025 at 6:30 PM CEST",
  "hosts": [
    {
      "id": "100064547147846",
      "name": "Domaine du Chant d'Eole",
      "photo": {
        "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-1/298567528_5220957837973345_8648174942358465817_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=107&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=8G91Nt1pc1UQ7kNvwGdNJ8Y&_nc_oc=AdnIS1vYQCfke-GIeR75BV82HzeY0D9pHyOh1dhK7EVuCHsgcfvtFo_Dub3gqLUG8MOlOt19YtR-Y_41gsMHCFgz&_nc_zt=24&_nc_ht=scontent-sjc6-1.xx&_nc_gid=aB85xpAUU8fgbJKbo9waRg&oh=00_AfT_-9Rd69UhZm_1Z6z3mx293Ji0tTkdZq3_SMTYEnYsNA&oe=688CC4BF",
      },
      "type": "User",
      "url": "https://www.facebook.com/chantdeole",
    },
    {
      "id": "61574392190956",
      "name": "Éole Event Experience",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-1/483527722_9177957355648232_3483947452904286550_n.jpg?stp=c0.149.1080.1080a_cp0_dst-jpg_s74x74_tt6&_nc_cat=102&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=h5saEoZGrzkQ7kNvwF2O9Kh&_nc_oc=AdkULhujgvk9B8RSrEKfT83WGEsGGX-jRgbzPGHLo0zXgndofzbY-l1Q5TZKHDWAuLGFTMCftM2IO_N9vwrcBY1I&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&_nc_gid=aB85xpAUU8fgbJKbo9waRg&oh=00_AfRg0qrVF25kvYL-JlzqJ5ZaH3xJahfCKTihO6jh28gHbQ&oe=688CB9C5",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/%C3%89ole-Event-Experience/61574392190956/",
    },
  ],
  "id": "2850462851803490",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 50.37674,
      "longitude": 3.96652,
    },
    "countryCode": null,
    "description": null,
    "id": "1116057487222479",
    "name": "Grand Route 58, 7040 Quévy-le-Grand, Belgique",
    "type": "TEXT",
    "url": null,
  },
  "name": "DStress Afterwork Gourmand - Soirée blanche 💃🥂",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": null,
  "photos": [
    {
      "id": "1116056183889276",
      "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/514722989_1116056187222609_6108162686955778932_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=75d36f&_nc_ohc=Mm1yoFYNLFgQ7kNvwGIhFoJ&_nc_oc=AdmnUXMNZK26JxR9HBNlZ4nYbI8D86qh5u8Jr5Ca41d-737k8FNlhrKAMdCGG_LP5bNHPBtJQfvStZYYNO3WNsjU&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=S-LvcLpKR2MDQ0_xh3J5oA&oh=00_AfQLXeoX8cCr9NrglKGC80pjj-Hhrzdj2fECiphg2x0Clg&oe=688CAA51",
      "url": "https://www.facebook.com/photo/?fbid=1116056183889276&set=gm.2850463041803471",
    },
    {
      "id": "1116056237222604",
      "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/514233749_1116056240555937_247168805084275781_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=75d36f&_nc_ohc=vYmGxDYvRRAQ7kNvwEGuWJb&_nc_oc=Adn4_7VmF3krnJgSSpU8dujIvA6l9lvDt2XKUDH0jTdYdt2T9RA8CgXrJ-aKns0g7MnENtIMnUQQ3DMWxcHy7_V0&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&_nc_gid=S-LvcLpKR2MDQ0_xh3J5oA&oh=00_AfSdP_sqY3m4C1Wthuvn_Qr0CrhAIXhjBwk09OweEorMbA&oe=688CA506",
      "url": "https://www.facebook.com/photo/?fbid=1116056237222604&set=gm.2850463031803472",
    },
    {
      "id": "1116056210555940",
      "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t39.30808-6/514356636_1116056223889272_5810713307992705711_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=75d36f&_nc_ohc=KRKTCP2rEF8Q7kNvwGtiYtw&_nc_oc=AdlPyeclc2Tw3HSOgNfz45DKZrEcRj5lCH8mN--LvEpMJNiMN6PnwGre3aVp_vhkJv3rXNHy2_kNGeJyPgbjKA8_&_nc_zt=23&_nc_ht=scontent-sjc3-1.xx&_nc_gid=S-LvcLpKR2MDQ0_xh3J5oA&oh=00_AfTrzs8rGSdDOIeVy329rweNmWS5-MfubtjdS7RJGQz4mQ&oe=688CBAD0",
      "url": "https://www.facebook.com/photo/?fbid=1116056210555940&set=gm.2850463028470139",
    },
    {
      "id": "1116056217222606",
      "imageUri": "https://scontent-sjc6-1.xx.fbcdn.net/v/t39.30808-6/514462754_1116056230555938_1557225880505450413_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=75d36f&_nc_ohc=wcV5BuDfRMoQ7kNvwG-Yi_S&_nc_oc=Adn8svc3J0_lW7gnUAnyU3pk09RJD6-j4Fnr428cmwFbvGX9yGZSPTGZx0rfpGMct6abbAsKqac0OTN4FAb1upwC&_nc_zt=23&_nc_ht=scontent-sjc6-1.xx&_nc_gid=S-LvcLpKR2MDQ0_xh3J5oA&oh=00_AfSC1G6JyjCyyslhAjo5BH1gv78EHQYyBY04ne9du-SB5g&oe=688C94B1",
      "url": "https://www.facebook.com/photo/?fbid=1116056217222606&set=gm.2850463038470138",
    },
  ],
  "siblingEvents": [],
  "startTimestamp": 1755189000,
  "ticketUrl": "https://www.eoleeventexperience.be/event/dstress-afterwork-gourmand-soiree-blanche-114/register",
  "timezone": "UTC+02",
  "url": "https://www.facebook.com/events/2850462851803490/",
  "usersResponded": 3374,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "categories": [],
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fGKExHSyeYn9zNTc9vcdVSzzwac3ojgip8t78GdL7cyEhnbmuwPAVFWHKpW4axzgl",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-sjc3-1.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=0R3HhJPw0z0Q7kNvwGhpfzk&_nc_oc=Adm5WGOitkZpONMbFdiv936sLE6BalYDNAu1y3X6JRviKBWXgyELPb7jK_7fRzNTwbETcFf_1sPnoKHHBPDTEOiH&_nc_zt=24&_nc_ht=scontent-sjc3-1.xx&oh=00_AfRqcQnHQAkrX0xKcIlSFzDjoBjoxPImEKZaPcSg5TpwQQ&oe=68AE573A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fGKExHSyeYn9zNTc9vcdVSzzwac3ojgip8t78GdL7cyEhnbmuwPAVFWHKpW4axzgl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "parentEvent": null,
  "photo": null,
  "photos": [],
  "siblingEvents": [],
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for events from group 1`] = `[]`;

exports[`E2E Generates the correct event data for events from group page 1`] = `[]`;

exports[`E2E Generates the correct event data for past events from page 1`] = `
[
  {
    "date": "Sat, Jul 26",
    "id": "1722771991675471",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/1722771991675471/",
  },
  {
    "date": "Thu, Jul 24",
    "id": "1340535317008515",
    "isCanceled": false,
    "isPast": true,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/1340535317008515/",
  },
  {
    "date": "Sat, Jul 19",
    "id": "709579405364276",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/709579405364276/",
  },
  {
    "date": "Thu, Jul 17",
    "id": "750483817326893",
    "isCanceled": false,
    "isPast": true,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/750483817326893/",
  },
  {
    "date": "Sat, Jul 12",
    "id": "2479308649069321",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/2479308649069321/",
  },
  {
    "date": "Fri, Jul 11",
    "id": "1421933765742624",
    "isCanceled": false,
    "isPast": true,
    "name": "UNA NOCHE DE REGGAETON",
    "url": "https://www.facebook.com/events/1421933765742624/",
  },
  {
    "date": "Thu, Jul 10",
    "id": "701394816028218",
    "isCanceled": false,
    "isPast": true,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/701394816028218/",
  },
  {
    "date": "Sat, Jul 5",
    "id": "8719802811478323",
    "isCanceled": false,
    "isPast": true,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/8719802811478323/",
  },
]
`;

exports[`E2E Generates the correct event data for upcoming events from page 1`] = `
[
  {
    "date": "Thu, Jul 31 at 10:00 PM CEST",
    "id": "1028210272814953",
    "isCanceled": false,
    "isPast": false,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/1028210272814953/",
  },
  {
    "date": "Sat, Aug 2 at 11:59 PM CEST",
    "id": "1427731988259573",
    "isCanceled": false,
    "isPast": false,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/1427731988259573/",
  },
  {
    "date": "Fri, Aug 8 at 10:00 PM CEST",
    "id": "1773342683571733",
    "isCanceled": false,
    "isPast": false,
    "name": "UNA NOCHE DE REGGAETON",
    "url": "https://www.facebook.com/events/1773342683571733/",
  },
]
`;

exports[`E2E Generates the correct event data for upcoming events from page 2`] = `
[
  {
    "date": "Thu, Jul 31 at 10:00 PM CEST",
    "id": "1028210272814953",
    "isCanceled": false,
    "isPast": false,
    "name": "Don´t Stop the Party",
    "url": "https://www.facebook.com/events/1028210272814953/",
  },
  {
    "date": "Sat, Aug 2 at 11:59 PM CEST",
    "id": "1427731988259573",
    "isCanceled": false,
    "isPast": false,
    "name": "FIESTA LATINA",
    "url": "https://www.facebook.com/events/1427731988259573/",
  },
  {
    "date": "Fri, Aug 8 at 10:00 PM CEST",
    "id": "1773342683571733",
    "isCanceled": false,
    "isPast": false,
    "name": "UNA NOCHE DE REGGAETON",
    "url": "https://www.facebook.com/events/1773342683571733/",
  },
]
`;
